the Azure portal interface updates

--- a/Instructions/20533D_LAB_AK_09.md
+++ b/Instructions/20533D_LAB_AK_09.md
@@ -24,19 +24,19 @@
 
 #### Task 2: Activate Azure AD Premium trial
   
-1. Refresh the Mirosoft Edge window displaying the Azure portal. Next, click the "Directory and subscription" filter near to your name in the upper right corner of the Azure portal and, in the "Directory + Subscription" blade, click the name of the Azure Active Directory tenant you created in the previous task.
+1. Refresh the Mirosoft Edge window displaying the Azure portal. Next, click the **Directory + subscription** filter icon appearing directly to the left of your name in the upper right corner of the Azure portal and, in the **Directory + Subscription** pane, click the name of the Azure Active Directory tenant you created in the previous task.
 
 2. In the hub menu of the Azure portal, click **Azure Active Directory**. This will display the **adatum** Azure Active Directory tenant blade.
 
 3. Click **Quick Start**.
 
-4. Click **Get a free trial for Azure AD Premium**.
+4. In the **Azure AD and Office 365** section, click **Get a free trial for Azure AD Premium**.
 
 5. On the **Activate** blade, in the **AZURE AD PREMIUM P2** section, click **Free trial**.
 
 6. On the **Activate Azure AD Premium P2 trial**, click **Activate**.
 
-7. Wait until the Azure AD Premium trial is successfully activated.
+7. Wait until the Azure AD Premium trial is successfully activated. 
 
 
 #### Task 3: Manage users by using the Azure portal
@@ -91,9 +91,9 @@
 
 17. On the **Update your password** page, in the **Current password** box, type again the temporary password. In the **New password** and **Confirm password** text boxes, type a new password, and click **Update password and sign in**. Take a note of the new password.
 
-   > **Note:** If you receive the message **We've seen that password too many times before.  Choose something harder to guess**, you'll need to modify the password until it is unique enough to be accepted.
+   > **Note:** If you receive the message **We've seen that password too many times before. Choose something harder to guess**, you'll need to modify the password until it is unique enough to be accepted.
    
-18. If prompted to start Microsoft Azure tour, click **Maybe later**. Next, click the user name in the upper-right corner and, in the drop-down menu, click **Sign out**
+18. If prompted to stay signed in, click **No**. Next, if prompted to start Microsoft Azure tour, click **Maybe later**. Next, click the user name in the upper-right corner and, in the drop-down menu, click **Sign out**
 
 19. Close the InPrivate Mirosoft Edge session.
 
@@ -103,9 +103,9 @@
 
 22. On the **Update your password** page, in the **Current password** box, type the temporary password. In the **New password** and **Confirm password** boxes, type a new password, and click **Update password and sign in**. Take a note of the new password.
 
-   > **Note:** If you receive the message **We've seen that password too many times before.  Choose something harder to guess**, you'll need to modify the password until it is unique enough to be accepted.
+   > **Note:** If you receive the message **We've seen that password too many times before. Choose something harder to guess**, you'll need to modify the password until it is unique enough to be accepted.
    
-23. Click **SIGN OUT** and close the in-private session of Mirosoft Edge.
+23. If prompted to stay signed in, click **No**. Next, if prompted to start Microsoft Azure tour, click **Maybe later**. Next, click the user name in the upper-right corner and, in the drop-down menu, click **Sign out**
 
 
 #### Task 4: Manage groups by using the Azure portal
@@ -128,21 +128,21 @@
 
 9. Click **Assignment options**.
 
-10. On the **License options** blade, verify that **Azure Active Directory Premium P2**, **Azure Active Directory Premium Plan 1**, and **Azure Multi-Factor Authentication** are set to **On** and click **OK**.  
+10. On the **License options** blade, verify that **Azure Active Directory Premium P2**, **Azure Active Directory Premium Plan 1**,  **Azure Multi-Factor Authentication**, and **Cloud App Security Discovery** are set to **On** and click **OK**.  
 
 11. Click **Assign**.
 
 12. Verify that the assignment completed successfully. 
 
-13. Navigate back to the **adatum** blade and click **groups**.
+13. Navigate back to the **adatum** blade and click **Groups**.
 
-14. Click **General** (Note: if the options are grayed out, refresh Edge browser).
+14. Click **General** (Note: if the options listed below are grayed out, refresh the Edge browser window).
 
 15. On the **General** blade, specify the following settings and click **Save**:
 
-  - Self-service group management enabled: **Yes**.
+  - Owners can manage group membership requests in the Access Panel: **Yes**.
   
-  - Users can create security groups: **Yes**
+  - Users can create security groups in Azure portals: **Yes**
 
 16. Click **All groups**.
 
@@ -164,7 +164,7 @@
 
 21. Click **Create** and close the **Group** blade.
 
-22. Back on the **Groups - All groups** blade, click **+ New group**.
+22. Switch back to the **Groups - All groups** blade and click **+ New group**.
 
 23. On the **Group** blade, specify the following settings:
 
@@ -182,7 +182,7 @@
 
 26. Click **Create** and close the **Group** blade.
 
-27. Back on the **Groups - All groups** blade and click **+ New group**.
+27. Switch back to the **Groups - All groups** blade and click **+ New group**.
 
 28. On the **Group** blade, specify the following settings:
 
@@ -203,7 +203,7 @@
 
 #### Task 5: Manage users and groups by using Azure PowerShell
   
-1. On the taskbar, right-click **Windows PowerShell**, and then click **Run ISE as Administrator**. If prompted, in the **User Account Control** dialog box, click **Yes**.
+1. On MIA-CL1, click **Start**, in the Start menu, expand the **Windows PowerShell** folder, right-click **Windows PowerShell ISE**, click **More**, and then click **Run as administrator**. When prompted by User Account Control for confirmation, click **Yes**.
 
 2. In the PowerShell ISE, click **File**, and then click **Open**.
 
@@ -211,85 +211,83 @@
 
 4. Click **Set-20553D0901Lab.ps1**, and then click **Open**.
 
-5. If the script pane is not visible, on the **View** menu, click **Show Script Pane**.
-
-6. In the PowerShell ISE, in the console pane, enter the following command and press Enter:
+5. In the PowerShell ISE window, in the console pane, enter the following command and press Enter:
 
   ```
   Connect-MsolService
   ```
 
-7. In the **Enter Credentials** dialog box, enter the full user name (including the @_domain name_.onmicrosoft.com suffix) of Karen Gruber and its password, and then click **OK**.
+6. In the **Enter Credentials** dialog box, enter the full name (including the @_domain name_.onmicrosoft.com suffix) of Karen Gruber's user account and its password, and then click **OK**.
 
-8. In the PowerShell ISE, in the script pane, locate the following code:
+7. In the PowerShell ISE, in the script pane, locate the following code:
 
   ```
   New-MsolUser -UserPrincipalName mledford@<#Copy your Azure Directory domain name here#>.onmicrosoft.com -DisplayName 'Mario Ledford' -FirstName 'Mario' -LastName 'Ledford' -Password 'Pa55w.rd' -ForceChangePassword $false -UsageLocation 'US'
   ```
 
-9. Replace **`<#Copy your Azure Directory domain name here#>`** with the unique name you used to specify the DNS domain name of the Adatum Azure AD tenant in the first exercise of this lab.
+8. Replace **`<#Copy your Azure Directory domain name here#>`** with the unique name you used to specify the DNS domain name of the Adatum Azure AD tenant in the first exercise of this lab.
 
-10. In the PowerShell ISE window, in the script pane, select the code that you just edited.
+9. In the PowerShell ISE window, in the script pane, select the code that you just edited.
 
-11. On the toolbar, click the **Run Selection** button and wait for the script to complete.
+10. On the toolbar, click the **Run Selection** button and wait for the script to complete.
 
-12. In the PowerShell ISE window, in the console pane, enter the following command, press Enter, and verify that the new user appears in the list of users:
+11. In the PowerShell ISE window, in the console pane, enter the following command, press Enter, and verify that the new user appears in the list of users:
 
   ```
   Get-MsolUser
   ```
 
-13. In the PowerShell ISE window, in the script pane, locate the following code and select it:
+12. In the PowerShell ISE window, in the script pane, locate the following code and select it:
 
   ```
   New-MsolGroup -DisplayName 'Azure team' -Description 'Adatum Azure team users'
   ```
 
-14. On the toolbar, click the **Run Selection** button and wait for the script to complete.
+13. On the toolbar, click the **Run Selection** button and wait for the script to complete.
 
-15. In the PowerShell ISE window, in the console pane, enter the following command, press Enter, and verify that the new group appears in the list of groups:
+14. In the PowerShell ISE window, in the console pane, enter the following command, press Enter, and verify that the new group appears in the list of groups:
 
   ```
   Get-MsolGroup
   ```
 
-16. In the PowerShell ISE window, in the script pane, locate the following code and select it:
+15. In the PowerShell ISE window, in the script pane, locate the following code and select it:
 
   ```
   $group = Get-MsolGroup | Where-Object DisplayName -eq 'Azure team'
   ```
 
-17. On the toolbar, click the **Run Selection** button, and wait for the script to complete.
+16. On the toolbar, click the **Run Selection** button, and wait for the script to complete.
 
-18. In the PowerShell ISE window, in the script pane, locate the following code and select it:
+17. In the PowerShell ISE window, in the script pane, locate the following code and select it:
 
   ```
   $user = Get-MsolUser | Where-Object DisplayName -eq 'Mario Ledford'
   ```
 
-19. On the toolbar, click the **Run Selection** button, and wait for the script to complete.
+18. On the toolbar, click the **Run Selection** button, and wait for the script to complete.
 
-20. In the PowerShell ISE window, in the script pane, locate the following code and select it:
+19. In the PowerShell ISE window, in the script pane, locate the following code and select it:
 
   ```
   Add-MsolGroupMember -GroupObjectId $group.ObjectId -GroupMemberType 'User' -GroupMemberObjectId $user.ObjectId
   ```
 
-21. On the toolbar, click the **Run Selection** button, and wait for the script to complete.
+20. On the toolbar, click the **Run Selection** button, and wait for the script to complete.
 
-22. In the PowerShell ISE window, in the script pane, locate the following code and select it:
+21. In the PowerShell ISE window, in the script pane, locate the following code and select it:
 
   ```
   Get-MsolGroupMember -GroupObjectId $group.ObjectId
   ```
 
-23. On the toolbar, click the **Run Selection** button, and wait for the script to complete.
+22. On the toolbar, click the **Run Selection** button, and wait for the script to complete.
 
-24. Switch to the **adatum** blade of the Azure portal in Mirosoft Edge.
+23. Switch to the **adatum** blade of the Azure portal in Mirosoft Edge.
 
-25. Click **Users**, **All users**, and verify that **Mario Ledford** appears in the list of users.
+24. Click **Users**, **All users**, and verify that **Mario Ledford** appears in the list of users.
 
-24. Switch back to the **adatum** blade of the Azure portal in Mirosoft Edge.
+25. Switch back to the **adatum** blade of the Azure portal in Mirosoft Edge.
 
 26. Click **Groups**, **All groups**, and verify that **Azure team** appears in the list of groups.
 
@@ -303,13 +301,13 @@
   
 1. Navigate to the **adatum** Azure Active Directory tenant blade in the Azure portal and click **Enterprise applications**.
 
-2. Click **New application**.
+2. Click **+ New application**.
 
 3. On the **Add an application** blade, in the **Enter a name** text box above the **Add from the gallery** section, type **Microsoft Account (Windows Live)** 
 
 4. In the list of results, click **Microsoft Account (Windows Live)**
 
-5. On the **Microsoft Account (Windows Live)** blade, type **Windows Live** in the **Name** field, and click **Add**. Wait till the application gets added.
+5. On the **Microsoft Account (Windows Live)** blade, click **Add**. Wait till the application gets added.
 
 6. On the **Microsoft Account (Windows Live) - Quick start** blade, click **Configure single sign-on (required)**. 
 
@@ -358,8 +356,6 @@
 
 #### Task 2: Configure SSO on a client computer
 
-   > **Note:** The following steps should be made on the host on a compatible browser. Currently Access Panel Extension cannot be installed on MIA-CL1. 
-  
 1. From Microsoft Edge, browse to [**https://myapps.microsoft.com**](https://myapps.microsoft.com).
 
 2. On the **Microsoft Azure** page, click **Use another account**.
@@ -370,29 +366,41 @@
 
 5. On the Apps page, click the ellipsis next to the **Microsoft Account (Windows Live)** icon. Note that there is no option to update the credentials. 
 
-6. On the Apps page, click **Skype**. 
+6. Switch to the PowerShell ISE window,  the console pane, enter the following command, and press Enter:
 
-7. In the **Skype** dialog box, click **Install Now**.
+  ```
+  Set-Service -Name 'wuauserv' -StartupType Manual
+  ```
+  
+7. Switch to the Microsoft Edge window and, on the Apps page, click **Skype**. 
 
-8. In the **Store** window, under the **Access Panel Extension** header, click **Get**.
+8. In the **Skype** dialog box, click **Install Now**.
 
-9. Wait for the extension to be downloaded and then, in the **Store** window, click **Launch**.
+9. In the **Store** window, under the **My Apps Secure Sign-in Extension** header, click **Get**.
 
-10. When prompted, in the **You have a new extension** dialog box in the Microsoft Edge window, click **Turn it on**.
+10. Wait for the extension to be downloaded and then switch back to the Microsoft Edge window.
 
-11. In the upper right corner of the Microsoft Edge window, click the ellipsis and, in the drop-down menu, click **Extensions**.
+11. When prompted, in the **You have a new extension** dialog box in the Microsoft Edge window, click **Turn it on**.
 
-12. Verify that **Access Panel Extension** is turned on. If not, click **Access Panel Extension** and move the slider to the **On** position.
+12. In the upper right corner of the Microsoft Edge window, click the ellipsis and, in the drop-down menu, click **Extensions**.
 
-13. Restart Microsoft Edge and browse back to [**https://myapps.microsoft.com**](https://myapps.microsoft.com). If prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account you created in the previous exercise and **Pa55w.rd** as the corresponding password. 
+13. Verify that My Apps Secure Sign-in Extension is turned on. If not, click **My Apps Secure Sign-in Extension** and move the slider to the **On** position.
 
-14. On the Apps page, click **Skype**. Note that you are prompted for credentials, because you did not enter any credentials on behalf of the user when configuring the application single sign-on settings.
+14. Restart Microsoft Edge and browse back to [**https://myapps.microsoft.com**](https://myapps.microsoft.com). If prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account you created in the previous exercise and **Pa55w.rd** as the corresponding password. 
 
-15. Click **Cancel** in the **Skype** dialog box.
+15. On the Apps page, click **Skype**. Note that you are prompted for credentials, because you did not enter any credentials on behalf of the user when configuring the application single sign-on settings.
 
-16. Click the user name in the upper right corner of the Microsoft Edge page and click **Sign out**.
+16. Click **Cancel** in the **Skype** dialog box.
 
-17. Close Microsoft Edge.
+17. Click the user name in the upper right corner of the Microsoft Edge page and click **Sign out**.
+
+18. Close Microsoft Edge.
+
+19. Switch to the PowerShell ISE window,  the console pane, enter the following command, and press Enter:
+
+  ```
+  Set-Service -Name 'wuauserv' -StartupType Disabled
+  ```
 
 
 > **Result**: After completing this exercise, you should have configured test applications and validated the SSO experience.
@@ -468,11 +476,11 @@
 
 7. In the Settings app, click **Accounts**, and then click **Access work or school**.
 
-8. On the **Connect to work or school** page, click **Connect**. This will open the **Set up a work or school account** window.
+8. On the **Access work or school** page, click **Connect**. This will open the **Set up a work or school account** window.
 
 9. Click **Join this device to Azure Active Directory**.
 
-10. On the **Let's get you signed in** page, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Karen Gruber's account and click **Next**.
+10. On the **Let's get you signed in** page, in the **Work or school account** text box, type the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Karen Gruber's account and click **Next**.
 
 11. On the **Enter password** page, type the password you assigned to the Karen Gruber's account in exercise 1 of this lab and click **Sign in**. 
 
@@ -497,19 +505,11 @@
   
 1. Sign in to MIA-CL1 by using the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Karen Gruber's Adatum Azure AD account and its password.
 
-2. On the **Your organization requires Windows Hello** page, click **Setup PIN**. 
+2. Start Microsoft Edge, and then go to [**https://portal.azure.com**](https://portal.azure.com).
 
-3. You should receive at this point a text message conatining a verification code. Retrieve the verification code from your mobile phone, type it in the text box on the **Help us protect your account** page, and click **Next**.
+3. Verify that you are automatically signed in as Karen Gruber by using single sign-on.
 
-4. On the **Set up a PIN** page, type and retype a PIN, and then click **OK**. Note that you cannot use a common number pattern (such as identical digits) and that the PIN must be at least six characters long.
-
-5. On the **All set!** page, click **OK**.
-
-6. Start Microsoft Edge, and then go to [**https://portal.azure.com**](https://portal.azure.com).
-
-7. Verify that you are automatically signed in as Karen Gruber by using single sign-on.
-
-8. Close all open applications sign out from MIA-CL1.
+4. Close all open applications sign out from MIA-CL1.
 
 
 
@@ -535,7 +535,7 @@
 
 8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-9. In the Azure portal, click **Edit dashboard**.
+9. In the Azure portal, on Dashboard, click **Edit**.
 
 10. Right-click unoccupied area of the dashboard and, in the right-click menu, click **Reset to default state**. When prompted to confirm, click **Yes**.
 
