the Azure portal interface updates

--- a/Instructions/20533D_LAB_09.md
+++ b/Instructions/20533D_LAB_09.md
@@ -113,7 +113,7 @@ The main tasks for this exercise are as follows:
 
 6. Open an InPrivate Microsoft Edge window, navigate to the Azure portal, sign in as Karen Gruber, when prompted, change the password to a new value and then sign-out and close the InPrivate Microsoft Edge window. Take a note of the new password.
 
-7. Note the message stating **No subscription found**. Click **SIGN OUT** and close the in-private session of Microsoft Edge.
+7. Click **Sign out** and close the in-private session of Microsoft Edge.
 
 
 #### Task 4: Manage groups by using the Azure portal
@@ -170,7 +170,7 @@ The main tasks for this exercise are as follows:
   Connect-MsolService
   ```
 
-4. When prompted, sign in as **Karen Gruber**.
+4. When prompted, sign in as Karen Gruber.
 
 5. In the PowerShell ISE, in the script pane, locate the following code:
   ```
@@ -264,6 +264,8 @@ The main tasks for this exercise are as follows:
 
 8. Assign the application to **Mario Ledford**
 
+9. Sign out from the Azure portal.
+
 
 #### Task 2: Test SSO
   
@@ -273,15 +275,19 @@ The main tasks for this exercise are as follows:
 
 3. On the applications page, click the ellipsis next to **Microsoft Account**. Note that there is no option to update the credentials.
 
-4. Click **Skype** and, when prompted, install the Access Panel Extension with the default settings and enable the extension once the installation completes.
+4. Switch to the Windows PowerShell ISE window and use the Windows PowerShell **Set-Service** cmdlet to set the startup of the Windows Update service to manual.
 
-5. Restart Microsoft Edge and browse to https://myapps.microsoft.com. When prompted, sign in as Mario Ledford.
+5. Switch back to the Microsoft Edge window, click **Skype** and, when prompted, install the My Apps Secure Sign-in Extension Microsoft Store app with the default settings and enable the extension once the installation completes.
 
-6. From the Application Access Panel, start **Skype**. Note that you are now prompted for credentials, because you did not enter any credentials on behalf of the user when configuring SSO. 
+6. Restart Microsoft Edge and browse to https://myapps.microsoft.com. When prompted, sign in as Mario Ledford.
 
-7. Click **Cancel** in the **Skype** dialog box.
+7. From the Application Access Panel, start **Skype**. Note that you are now prompted for credentials, because you did not enter any credentials on behalf of the user when configuring SSO. 
 
-8. Sign out from the Application Access Panel and close Microsoft Edge.
+8. Click **Cancel** in the **Skype** dialog box.
+
+9. Sign out from the Application Access Panel and close Microsoft Edge.
+
+10. Switch to the Windows PowerShell ISE window and use the Windows PowerShell **Set-Service** cmdlet to disable the Windows Update service.
 
 
 > **Result**: After completing this exercise, you should have installed and configured a test application and validated the SSO experience.
@@ -355,15 +361,11 @@ The main tasks for this exercise are as follows:
   
 1. Sign in to MIA-CL1 by using the Karen Gruber's Adatum Azure AD account and the password you set for this account in exercise 1.
 
-2. Accept the incoming call and press # key on your phone to complete verification.
+2. Start Microsoft Edge and browse to the Azure portal.
 
-3. Set up a PIN. 
+3. Verify that you are automatically signed in as Karen Gruber by using SSO.
 
-4. Start Microsoft Edge and browse to the Azure portal.
-
-5. Verify that you are automatically signed in as Karen Gruber by using SSO.
-
-6. Sign out from MIA-CL1
+4. Sign out from MIA-CL1
 
 
 #### Task 3: Remove the lab environment
