the Azure portal interface updates

--- a/Instructions/20533D_LAB_AK_10.md
+++ b/Instructions/20533D_LAB_AK_10.md
@@ -10,24 +10,24 @@
 2. Right-click **Start** and click **Run** (alternatively, click **Start** and type **Run** in the Start menu Search box, or press the **Windows key+R**). In the **Run** text box, type the following and press **Enter**:
 
   ```
-  Notepad E:\Labfiles\Lab10\Starter\Set-20533D1001Lab.ps1
+  Write E:\Labfiles\Lab10\Starter\Set-20533D1001Lab.ps1
   ```
 
-3. In Notepad, select all lines in the file.
+3. In WordPad, select all lines in the file.
 
-4. In Notepad, click **Edit** and, in the drop-down menu, click **Copy**.
+4. In WordPad, click **Copy**.
 
 5. Open Microsoft Edge and browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com).
 
 6. When prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-7. Hover the mouse over the user name entry in the upper right corner of the Azure portal and ensure that you are signed on to the correct subscription. If not, click the user name entry and, in the drop-down menu, click the entry representing the Azure subscription that you chose when running the provisioning script at the beginning of this module. 
+7. Note the user name entry in the upper right corner of the Azure portal and ensure that you are signed on to the correct Azure Active Direcory tenant. If not, click the **Directory + subscription** filter icon appearing directly to the left of your name in the upper right corner of the Azure portal and, in the **Directory + Subscription** pane, click the name of the Azure Active Directory tenant associated with the Azure subscription that you chose when running the provisioning script at the beginning of this module. 
 
 8. In the hub menu of the Azure portal, click **All services** and then, in the service menu, click **Virtual machines**.
 
 9. On the Virtual machines blade, click the ellipsis to the right of the **20533D1001-vm1** entry and click **Connect**.
 
-10. When prompted, click **Save** and then click **Open**.
+10. On the **Connect to virtual machine** blade, click **Download RDP File**. When prompted, click **Open**.
 
 11. If a Remote Desktop Connection warning message displays, select **Don't ask me again for connections to this computer**, and then click **Connect**. 
 
@@ -64,7 +64,7 @@
 
 2. Click the **On** link next to the **IE Enhanced Security Configuration** label.
 
-3. In the Internet Explorer Enhanced Security Configuration dialog box, in the **Administrators** and the **Users** section, click **Off** and click **OK**.
+3. In the Internet Explorer Enhanced Security Configuration dialog box, in the **Administrators** section, click **Off** and click **OK**.
 
 4. Click the **Internet Explorer** shortcut on the taskbar.
 
@@ -74,7 +74,7 @@
 
 7. When prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-8. Click **+ Create resource** in the upper left corner of the portal, click **Security + Identity**, and then, click **Azure Active Directory**.
+8. Click **+ Create resource** in the upper left corner of the portal, click **Identity**, and then, click **Azure Active Directory**.
 
 9. On the **Active Directory Enterprise** blade, specify the following settings and click **Create**:
 
@@ -86,13 +86,13 @@
 
 10. Wait until the new directory is provisioned.
 
-11. Refresh the Internet Explorer window. Next, click the user name in the upper right corner of the Azure portal and, in the **DIRECTORY** section of the drop down menu, click the entry labeled **AdatumSync**.
+11. Refresh the Internet Explorer window. Next, click the **Directory + subscription** filter icon appearing directly to the left of your name in the upper right corner of the Azure portal and, in the **Directory + Subscription** pane, click the name of the newly created Azure Active Directory tenant.
 
 12. Ensure that **ADATUMSYNC** appears in the upper right corner of the portal underneath your Microsoft account name and, in the hub menu, click **All services**
 
 13. In the services menu, click **Azure Active Directory**
 
-14. On the adatumsync blade, click the **Add a user** link on the **Quick tasks** tile.
+14. On the adatumsync blade, in the **Create** section, click the **User** link.
 
 15. On the **User** blade, specify the following settings and click **Create**:
 
@@ -118,7 +118,7 @@
 
    > **Note:** If you receive the message **We've seen that password too many times before. Choose something harder to guess**, you'll need to modify the password until it is unique enough to be accepted.
    
-24. In the Internet Explorer window, click the user name in the upper-right corner of the page and, in the drop-down menu, click **Sign out**
+24. If prompted to stay signed in, click **No**. Next, if prompted to start Microsoft Azure tour, click **Maybe later**. Next, click the user name in the upper-right corner and, in the drop-down menu, click **Sign out**
 
 25. Close the InPrivate Internet Explorer session.
 
@@ -126,15 +126,15 @@
 
 #### Task 3: Install Azure AD Connect with custom settings
   
-1. From the Remote Desktop session to 20533D1001-vm1, start a new Internet Explorer window.
+1. In the Remote Desktop session to 20533D1001-vm1, switch to the Azure portal.
 
-2. Download Azure AD Connect from [**https://www.microsoft.com/en-us/download/details.aspx?id=47594**](https://www.microsoft.com/en-us/download/details.aspx?id=47594).
+2. Navigate to the adatumsync blade, click **Azure AD Connect**, and then click the **Download Azure AD Connect** link. This will redirect you to the Microsoft Download Center page of Azure AD Connect. 
 
-3. In the pop-up bar at the bottom of the Internet Explorer window, click **Save**.
+3. On the Microsof Download Center page of Azure AD Connect, click **Download**. 
 
-4. After the download is complete, click **Open Folder**.
+4. In the pop-up bar at the bottom of the Internet Explorer window, click **Run**.
 
-5. In the File Explorer window, double-click **AzureADConnect.msi** to start the installation. When prompted, click **Run**.
+5. If prompted, in the **Open File - Security Warning** dialog box, click **Run**.
 
 6. On the **Welcome** page, select **I agree to the license terms and privacy notice**, and then click **Continue**.
 
@@ -142,13 +142,13 @@
 
 8. On the **Required Component** page, review the options, and then click **Install**.
 
-9. On the **User sign-in** page, verify that **Password Synchronization** is selected, and then click **Next**.
+9. On the **User sign-in** page, verify that **Password Hash Synchronization** is selected, and then click **Next**.
 
 10. On the **Connect to Azure AD** page, provide the credentials of the newly created SyncAdmin Azure AD Global Admin, and then click **Next**:
 
-  - USERNAME: **syncadmin@_domain name_.onmicrosoft.com** where _domain name_ is the unique name you assigned to the new Azure Active Directory tenant in task 2
+  - USERNAME: **syncadmin@_domain name_.onmicrosoft.com** where **_domain name_** is the unique name you assigned to the new Azure Active Directory tenant in task 2
 
-  - PASSWORD: _the password you set in task 2_
+  - PASSWORD: the corresponding password
 
 11. On the **Connect your directories** page, verify that the **adatum.com** forest is selected and click **Add Directory**
 
@@ -168,11 +168,11 @@
 
 17. On the **Filter users and devices** page, verify that **Synchronize all users and devices** is selected, and then click **Next**.
 
-18. On the **Optional feature** page, verify that **Password synchronization** is selected, and then click **Next**.
+18. On the **Optional feature** page, verify that **Password hash synchronization** is selected, and then click **Next**.
 
 19. On the **Ready to configure** page, verify that **Start synchronization process as soon as the configuration completes** is selected, and then click **Install**. 
 
-> **Note:** Installation might take 5-10 minutes.
+> **Note:** Installation will take a few minutes.
 
 20. On the **Configuration complete** page, click **Exit** to close Azure AD Connect.
 
@@ -180,7 +180,7 @@
 
 21. Switch back to the Azure portal in the Internet Explorer window.
 
-22. In the Azure portal, on the **AdatumSync** blade, click the **Users and groups**, click **All Users** and confirm that the list of users includes **Beverly Beach** from the **AccountsToSync** OU but does not include **Darwin Shivers** from the **AccountsNotToSync** OU.
+22. In the Azure portal, on the **AdatumSync** blade, click **Users**, click **All Users** and confirm that the list of users includes **Beverly Beach** from the **AccountsToSync** OU but does not include **Darwin Shivers** from the **AccountsNotToSync** OU.
 
 > **Result**: After completing this exercise, you should have installed and configured Azure AD Connect, and have performed initial synchronization.
 
@@ -243,7 +243,7 @@
 
 12. In the Azure portal, on the **AdatumSync** blade, on the **Users and groups - All Users** blade, click **Beverly Beach**
 
-13. In the **Overview** section of the **Beverly beach** blade, verify that the values of the **Department** and **Job title** entries match the ones you configured for the Active Directory account. If you do not see any changes, wait for a few minutes, and then refresh the page.
+13. On the **Beverly Beach - Profile** blade, in the **Job info** section, verify that the values of the **Department** and **Job title** entries match the ones you configured for the Active Directory account. If you do not see any changes, wait for a few minutes, and then refresh the page.
 
 14. Close the **20533D1001-vm1** remote desktop session, and click **OK** when prompted.
 
@@ -271,7 +271,7 @@
 
 8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-9. In the Azure portal, click **Edit dashboard**.
+9. In the Azure portal, on Dashboard, click **Edit**.
 
 10. Right-click unoccupied area of the dashboard and, in the right-click menu, click **Reset to default state**. When prompted to confirm, click **Yes**.
 
