the Azure portal interface updates

--- a/Instructions/20533D_LAB_10.md
+++ b/Instructions/20533D_LAB_10.md
@@ -3,7 +3,7 @@
   
 ### Scenario
   
- A. Datum Corporation users currently rely on Active Directory to authenticate when accessing on-premises applications. While evaluating Azure Active Directory for A. Datum, you need to explore the possiblity of using existing Active Directory users and groups to authenticate access to resources in Azure, including third-party Software as a service (SaaS) applications. You need to verify changes to Active Directory user and group accounts can automatically replicate to Azure AD.
+Adatum Corporation users access on-premises applications by authenticating once, during initial sign-in to their client computers. While evaluating Azure for Adatum, you must verify that Adatum users can continue using their existing credentials to access Azure resources. In addition, you must verify that attribute changes to Active Directory user and group accounts will automatically replicate to Azure AD.
 
 ### Objectives
   
@@ -29,7 +29,8 @@
   
 ### Scenario
   
- A. Datum plans to implement directory integration. To test the planned implementation, you need to deploy and configure Azure AD Connect to synchronize your test Active Directory domain with a test Azure AD tenant. Since you are not in the position at this point to verify a custom DNS domain, you will be using the default DNS name of the test Azure AD domain.
+Adatum plans to integrate its AD DS with Azure AD. To test this plan, you need to deploy and configure Azure AD Connect to synchronize your test Active Directory environment with a test Azure AD tenant. To eliminate the need to verify a custom DNS domain, you will be using the default DNS name of the test Azure AD domain.
+
 
 The main tasks for this exercise are as follows:
 
@@ -44,11 +45,11 @@ The main tasks for this exercise are as follows:
   
 1. Sign in to MIA-CL1 as **Student** with the password **Pa55w.rd**.
 
-2. Open the file E:\\Labfiles\\Lab10\\Starter\\Set-20533D1001Lab.ps1 in Notepad and copy all lines to Clipboard.
+2. Open the file E:\\Labfiles\\Lab10\\Starter\\Set-20533D1001Lab.ps1 in WordPad and copy all lines to Clipboard.
 
 3. In the Microsoft Edge window, navigate to the Azure portal and, when prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-4. If necessary, in the Azure portal, switch to the Default Directory.
+4. If necessary, in the Azure portal, switch to the Azure Active Directory tenant associated with the Azure subscription that you chose when running the provisioning script at the beginning of this module. .
 
 5. Initiate a Remote Desktop Protocol (RDP) session to **20533D1001-vm1**, and then sign in as **ADATUM\\Student** with the password **Pa55w.rd1234**.
 
@@ -61,9 +62,9 @@ The main tasks for this exercise are as follows:
 
 #### Task 2: Create a new Azure AD tenant and a Global Admin account
   
-1. Within the Remote Desktop session, from Server Manager, disable Microsoft Edge Enhanced Security Configuration for administrators and users. 
+1. Within the Remote Desktop session, from Server Manager, disable IE Enhanced Security Configuration for administrators. 
 
-2. Open Microsoft Edge and navigate to the Azure portal.
+2. Open Internet Explorer and navigate to the Azure portal. If prompted to set up Internet Explorer 11, ensure that the **Use recommended security, privacy, and compatibility settings** option is selected and click **OK**.
 
 3. From the Azure portal, create a new Azure AD tenant with the following settings: 
 
@@ -96,9 +97,9 @@ The main tasks for this exercise are as follows:
 
 #### Task 3: Install Azure AD Connect with custom settings
   
-1. From the Remote Desktop session to 20533D1001-vm1, switch to the Internet Explorer. Download Azure AD Connect from https://www.microsoft.com/en-us/download/details.aspx?id=47594 to the **Downloads** folder.
+1. From the Remote Desktop session to 20533D1001-vm1, switch to the Internet Explorer displaying the Azure portal. Use the **Download Azure AD Connect** link on the **Azure AD Connect** page of locate the download page of Azure AD Connect MSI file and download it the **Downloads** folder.
 
-2. Install the Azure AD Connect tool, select custom settings, and then ensure that **Password Synchronization** is selected.
+2. Install the Azure AD Connect tool, select custom settings, and then ensure that **Password Hash Synchronization** is selected as the Sign On method.
 
 3. Set the credentials for Azure AD tenant AdatumSync to the SyncAdmin Global Administrator account.
 
@@ -107,7 +108,7 @@ The main tasks for this exercise are as follows:
 5. On the **Domain and OU filtering** page, limit synchronization to the **AccountsToSync** organization unit only.
 
 6. Accept the default values in the remaining wizard pages, and then start the synchronization process. Close the wizard once the configuration is completed.
-> **Note:** You might need to wait a few minutes for the initial synchronization to complete.
+> **Note:** Installation will take a few minutes.
 
 7. In the Azure portal, on the **AdatumSync** blade, navigate to the **All Users** blade of the **AdatumSync** Azure AD tenantn and confirm that the list of users includes **Beverly Beach** from the **AccountsToSync** OU but does not include **Darwin Shivers** from the **AccountsNotToSync** OU.
 
@@ -118,7 +119,8 @@ The main tasks for this exercise are as follows:
   
 ### Scenario
   
- A. Datum wants to test Azure AD synchronization by changing a few attributes of a user account and then performing manual synchronization.
+Adatum wants to test Azure AD synchronization by changing a few attributes of a synchronized user account and then performing manual synchronization.
+
 
 The main tasks for this exercise are as follows:
 
