--- a/Instructions/20533D_LAB_10.md
+++ b/Instructions/20533D_LAB_10.md
@@ -166,7 +166,13 @@ The main tasks for this exercise are as follows:
 
 8. In the Azure portal, reset the dashboard to the default state. 
 
-9. Close all open windows.
+9. Start Windows PowerShell as Administrator. 
+
+10. Use the **Connect-MsolService** cmdlet to authenticate to the AdatumSync Azure Active Directory tenant by using the SyncAdmin credentials.
+
+11. Use the **Set-MsolDirSyncEnabled** cmdlet to disable directory synchronization to the AdatumSync Azure Active Directory tenant.
+
+12. Close all open windows.
 
 > **Result**: After completing this exercise, you should have changed attributes on a user account, and then forced synchronization. 
 
